--- a/QuickPollUI/Shared/NoAuth.razor
+++ b/QuickPollUI/Shared/NoAuth.razor
@@ -6,15 +6,10 @@
 
     MouseEventArgs mouseArgs;
 
-    protected override void OnInitialized()
-    {
+    protected override void OnInitialized() =>
         ShowLoginModal(mouseArgs);
-    }
 
-    private void ShowLoginModal(MouseEventArgs mouseArgs)
-    {
-        Dictionary<string, object> ParameterArguments = new();
-
-        ModalWrapperComponent.ShowModal(mouseArgs, typeof(Login), ParameterArguments, true);
-    }
+    private void ShowLoginModal(MouseEventArgs mouseArgs) =>
+        ModalWrapperComponent.ShowModal(
+            mouseArgs, typeof(Login), new Dictionary<string, object> { }, true);
 }
